--- a/week01/week01_assignment.ipynb
+++ b/week01/week01_assignment.ipynb
@@ -75,27 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 21995a2] Submitting my first assignment\n",
-      " 1 file changed, 109 insertions(+)\n",
-      " create mode 100644 week01/week01_assignment.ipynb\n"
+      "[main fbce548] Submitting my first assignment\n",
+      " 1 file changed, 33 insertions(+), 4 deletions(-)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning: Permanently added the ECDSA host key for IP address '140.82.114.4' to the list of known hosts.\n",
       "remote: This repository moved. Please use the new location:        \n",
       "remote:   git@github.com:Sairupesh24/hds5210-2022.git        \n",
       "To github.com:sairupesh24/hds5210-2022.git\n",
-      "   f32e28c..21995a2  main -> main\n"
+      "   21995a2..fbce548  main -> main\n"
      ]
     }
    ],
