--- a/week05/week05_assignment_1.ipynb
+++ b/week05/week05_assignment_1.ipynb
@@ -12,17 +12,11 @@
     }
    },
    "source": [
-    "# Week 4 Exercises\n",
+    "# Week 5 Exercises\n",
     "\n",
-    "_modules 13-15_\n",
+    "_McKinney 3.2_\n",
     "\n",
-    "_See also [documentation on standard data types](https://docs.python.org/3/library/stdtypes.html)_\n",
-    "\n",
-    "Modules 13 through 15 have all been about different built-in data types that can be used to create larger and more complex data structures.  We learned about tuples, lists, dictionaries, and how to access and process that data in new ways.\n",
-    "\n",
-    "\n",
-    "\n",
-    "Do not change anything else or add any other code to this notebook. If you need to do scratch work to determine an answer, create a new notebook and do your work there.\n",
+    "These modules were all about the idea of creating your own functions from scratch.  In previous weeks, I've been providing that framework for you. If you're new to programming, that may not have entirely made sense.  With this week's lecture it should start to feel better.  Test your knowledge of the content from the lectures through the multiple choice questions below.\n",
     "\n",
     "---\n",
     "---"
@@ -32,17 +26,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13.1 Which of the following statements are true?\n",
+    "### 21.1 What does the keyword `def` mean before a function name?\n",
     "\n",
-    "Placeholders for two answers are provided, but there may be more correction options.\n",
-    "> A) The elements in both Tuples and Lists have a specific order \n",
+    "> A) _define_ - You are saying that this is the function definition\n",
     ">\n",
-    "> B) Tuples and Lists can both be nested\n",
+    "> B) _default_ - This is the default work the function should do\n",
     ">\n",
-    "> C) A Tuple can be concatenated to another Tuple using the `+` operator\n",
+    "> C) _def_ - Doesn't stand for anything, it's just what you put there\n",
     ">\n",
-    "> D) Tuples and Lists can both have items appended to their ends\n",
-    "\n"
+    "> D) _defer_ - Meaning don't do anything right now"
    ]
   },
   {
@@ -52,28 +44,27 @@
    "outputs": [],
    "source": [
     "answers = {}\n",
-    "answers[\"13.1\"] = [\"A\",\"B\",\"C\"]"
+    "answers[\"21.1\"] = \"A\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13.2 What does this code output?\n",
+    "### 21.2 Which of the following are valid ways to call the function with the `def` below?\n",
     "\n",
     "```python\n",
-    "(a, b) = ('First', 'Second')\n",
-    "(b, a) = (a, b)\n",
-    "print(b)\n",
+    "def my_function (fname='John', lname='Doe', gender='M'):\n",
+    "    ...\n",
     "```\n",
     "\n",
-    "> A) `First`\n",
+    "> A) `my_function()`\n",
     ">\n",
-    "> B) `Second`\n",
+    "> B) `my_function(last_name='Boal')`\n",
     ">\n",
-    "> C) `('First', 'Second')`\n",
+    "> C) `my_function(fname='Paul', lname='Boal')`\n",
     ">\n",
-    "> D) _nothing_"
+    "> D) `my_function(lname='Boal', fname='Paul', gender='M')`"
    ]
   },
   {
@@ -82,27 +73,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"13.2\"] = \"A\""
+    "answers[\"21.2\"] = [\"A\", \"B\", \"C\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13.3 What is the output of the following code?\n",
+    "### 21.3 Which of the following lines of code does not have any functions in it?\n",
     "\n",
-    "```python\n",
-    "(a, b) = (['Paul','Alex','Linda','Kathy','Amit','Samira'], [41, 38, 30, 43, 41, 40, 34, 52])\n",
-    "len(b)\n",
-    "```\n",
     "\n",
-    "> A) _Error_\n",
+    "> A) `pi * (radius ** 2)`\n",
     ">\n",
-    "> B) `6`\n",
+    "> B) `[ x for x in range(10) ]`\n",
     ">\n",
-    "> C) `8`\n",
+    "> C) `value = math.log(23,2)`\n",
     ">\n",
-    "> D) _None_"
+    "> D) `print('I am a good student')`"
    ]
   },
   {
@@ -111,27 +98,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"13.3\"] = \"C\""
+    "answers[\"21.3\"] = \"A\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13.4 What is the output of the following code?\n",
+    "### 21.4 Which of the following is not a valid function definition line for function that calculates R0 (aka \"R naught\")\n",
     "\n",
-    "```python\n",
-    "(a, b) = (['Paul','Alex','Linda','Kathy','Amit','Samira'], [41, 38, 30, 43, 41, 40, 34, 52])\n",
-    "len(a[5])\n",
-    "```\n",
-    "\n",
-    "> A) `4`\n",
+    "> A) `def R0 (attack_rate, susceptible_population):`\n",
     ">\n",
-    "> B) `5`\n",
+    "> B) `def r-naught (attack_rate, susceptible_population):`\n",
     ">\n",
-    "> C) `6`\n",
+    "> C) `def r_naught (attack_rate, susceptible_population):`\n",
     ">\n",
-    "> D) _None_"
+    "> D) `def R0 (susceptible_population, attack_rate):`"
    ]
   },
   {
@@ -140,27 +122,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"13.4\"] = \"C\""
+    "answers[\"21.4\"] = \"B\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13.5 What is the output from the code below?\n",
+    "### 22.1 Which is true about docstrings?\n",
     "\n",
-    "```python\n",
-    "dxs = [['COPD','CHF','MI'],['DVT','DBS'],['GI','CNC']]\n",
-    "len(dxs[1])\n",
-    "```\n",
-    "\n",
-    "> A) _Error_\n",
+    "> A) They are stored in Python as just a long string inside the function definition.\n",
     ">\n",
-    "> B) `3`\n",
+    "> B) They can contain tests to help you demonstrate your code works correctly.\n",
     ">\n",
-    "> C) `2`\n",
+    "> C) They tell Python what to say when someone asks for `help()` on your function.\n",
     ">\n",
-    "> D) _None_"
+    "> D) All of these"
    ]
   },
   {
@@ -169,28 +146,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"13.5\"] = \"C\""
+    "answers[\"22.1\"] = \"D\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13.6 What will the resulting value of `vals` be?\n",
+    "### 22.2 True or False: From now on you should include docstrings in the _programming_ homework assignments?\n",
     "\n",
-    "```python\n",
-    "vals = [3.14, 1.41]\n",
-    "vals.append([2.72])\n",
-    "vals = vals + ['i']\n",
-    "```\n",
-    "\n",
-    "> A) `[3.14, 1.41, 2.72, ['i']]`\n",
+    "> A) True\n",
     ">\n",
-    "> B) `[3.14, 1.41, [2.72], 'i']`\n",
-    ">\n",
-    "> C) `[3.14, 1.41, [2.72], ['i']]`\n",
-    ">\n",
-    "> D) `[3.14, 1.41, [2.72, 'i']`"
+    "> B) False"
    ]
   },
   {
@@ -199,23 +166,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"13.6\"] = \"B\""
+    "answers[\"22.2\"] = \"A\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 13.7 Which of the following statements are correct?\n",
+    "### 23.1 Which of the following is most common way to encapsulate data processing rules in Python?\n",
     "\n",
-    "Placeholders for two options are provided, but there may be more correct answers.\n",
-    "> A) Lists can have other lists inside them\n",
+    "> A) dict\n",
     ">\n",
-    "> B) When you create a list, you must specify how big it will be\n",
+    "> B) str\n",
     ">\n",
-    "> C) The items in a list do not have a specific order\n",
+    "> C) function\n",
     ">\n",
-    "> D) list.sort() will sort the list in place without creating a copy"
+    "> D) tuple\n",
+    ">\n",
+    "> E) int"
    ]
   },
   {
@@ -224,22 +192,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"13.7\"] = [\"A\",\"D\"]"
+    "answers[\"23.1\"] = \"C\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 14.1 When you retrieve items from a dictionary in a **for** loop, in what order are they processed?\n",
+    "### 23.2 What does DRY stand for?\n",
     "\n",
-    "> A) An arbitary order that is the same each time as long as the dictionary doesn't change\n",
+    "\n",
+    "> A) Do not repeat yourself\n",
     ">\n",
-    "> B) Always in ascending order\n",
+    "> B) Do not repeat yourself\n",
     ">\n",
-    "> C) Always in descending order\n",
+    "> C) Do not repeat yourself\n",
     ">\n",
-    "> D) A different order that is completely random each time"
+    "> D) All of the above"
    ]
   },
   {
@@ -248,23 +217,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"14.1\"] = \"A\""
+    "answers[\"23.2\"] = \"D\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 14.2 What data types can be used for dictionary *keys*?\n",
+    "### 24.1 When Python tells you there's been an exception, what is the key word that we use in our Python code to indicate how Python should react to that exception?\n",
     "\n",
-    "Two placeholders are provided, but more answers may be correct and should be included.\n",
-    "> A) Strings\n",
+    "> A) Throw\n",
     ">\n",
-    "> B) Integers\n",
+    "> B) Raise\n",
     ">\n",
-    "> C) Floats\n",
+    "> C) Except\n",
     ">\n",
-    "> D) Typles"
+    "> D) Crash"
    ]
   },
   {
@@ -273,23 +241,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"14.2\"] = [\"A\",\"B\",\"C\",\"D\"]"
+    "answers[\"24.1\"] = \"C\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 14.3 Which of the following statements are correct?\n",
+    "### 24.2 When you, as the programmer, want to notify Python that an exception should be triggered, what is the key word we use for that?\n",
     "\n",
-    "Two placeholders are provided, but more answers may be correct and should be included.\n",
-    "> A) Dictionaries can contain lists\n",
+    "> A) Throw\n",
     ">\n",
-    "> B) Lists can contain dictionaries\n",
+    "> B) Raise\n",
     ">\n",
-    "> C) All dictionary keys must be strings\n",
+    "> C) Except\n",
     ">\n",
-    "> D) Dictionaries can contain multiple entries for the same key"
+    "> D) Crash"
    ]
   },
   {
@@ -298,32 +265,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"14.3\"] = [\"A\",\"B\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 14.4 When you enter your answers for this homework, what is the data type of the `answers` variable?\n",
-    "\n",
-    "> A) String\n",
-    ">\n",
-    "> B) Dictionary\n",
-    ">\n",
-    "> C) List\n",
-    ">\n",
-    "> D) Tuple\n"
+    "answers[\"24.2\"] = \"B\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "answers[\"14.4\"] = \"B\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -341,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -353,17 +303,16 @@
      "output_type": "stream",
      "text": [
       "   Q#               Yours  Correct?\n",
-      " 13.1     ['A', 'B', 'C']        OK\n",
-      " 13.2                   A        OK\n",
-      " 13.3                   C        OK\n",
-      " 13.4                   C        OK\n",
-      " 13.5                   C        OK\n",
-      " 13.6                   B        OK\n",
-      " 13.7          ['A', 'D']        OK\n",
-      " 14.1                   A        OK\n",
-      " 14.2['A', 'B', 'C', 'D']        OK\n",
-      " 14.3          ['A', 'B']        OK\n",
-      " 14.4                   B        OK\n"
+      " 21.1                   A        OK\n",
+      " 21.2     ['A', 'B', 'C']        NO\n",
+      " 21.3                   A        OK\n",
+      " 21.4                   B        OK\n",
+      " 22.1                   D        OK\n",
+      " 22.2                   A        OK\n",
+      " 23.1                   C        OK\n",
+      " 23.2                   D        OK\n",
+      " 24.1                   C        OK\n",
+      " 24.2                   B        OK\n"
      ]
     }
    ],
@@ -374,7 +323,7 @@
     "\n",
     "test = {\n",
     "    \"user\": getpass.getuser(),\n",
-    "    \"week\": \"week04\",\n",
+    "    \"week\": \"week05\",\n",
     "    \"answers\": answers\n",
     "}\n",
     "\n",
@@ -386,6 +335,7 @@
     "    Payload=json.dumps(test))\n",
     "\n",
     "result = json.loads(response['Payload'].read().decode('utf-8'))\n",
+    "# print(result)\n",
     "\n",
     "print('{0:>5}{1:>20}{2:>10}'.format('Q#','Yours','Correct?'))\n",
     "for row in result.get('results'):\n",
@@ -423,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -440,26 +390,17 @@
       "2. Type \"yes\" or \"no\" below\n",
       "3. Press Enter\n",
       "\n",
-      " yes\n"
+      " no\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 820b9a7] Submitting the week 4 review exercises\n",
-      " 1 file changed, 510 insertions(+)\n",
-      " create mode 100644 week04/week04_assignment_1.ipynb\n",
-      "Counting objects: 4, done.\n",
-      "Delta compression using up to 2 threads.\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 3.68 KiB | 3.68 MiB/s, done.\n",
-      "Total 4 (delta 1), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
-      "remote: This repository moved. Please use the new location:\u001b[K\n",
-      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
-      "To github.com:sairupesh24/hds5210-2022.git\n",
-      "   f8017de..820b9a7  main -> main\n"
+      "\n",
+      "    \n",
+      "OK. We can wait.\n",
+      "\n"
      ]
     }
    ],
@@ -473,24 +414,14 @@
     "''')\n",
     "\n",
     "if a=='yes':\n",
-    "    !git add week04_assignment_1.ipynb\n",
-    "    !git commit -a -m \"Submitting the week 4 review exercises\"\n",
+    "    !git add week05_assignment_1.ipynb\n",
+    "    !git commit -a -m \"Submitting the week 5 review exercises\"\n",
     "    !git push\n",
     "else:\n",
     "    print('''\n",
     "    \n",
     "OK. We can wait.\n",
     "''')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "---\n",
-    "\n",
-    "If the message above says something like _Submitting the week 3 review exercises_ or _Everything is up to date_, then your work was submitted correctly."
    ]
   }
  ],
