--- a/week05/week05_assignment_1.ipynb
+++ b/week05/week05_assignment_1.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers[\"21.2\"] = [\"A\", \"B\", \"C\"]"
+    "answers[\"21.2\"] = [\"A\", \"C\", \"D\"]"
    ]
   },
   {
@@ -304,7 +304,7 @@
      "text": [
       "   Q#               Yours  Correct?\n",
       " 21.1                   A        OK\n",
-      " 21.2     ['A', 'B', 'C']        NO\n",
+      " 21.2     ['A', 'C', 'D']        OK\n",
       " 21.3                   A        OK\n",
       " 21.4                   B        OK\n",
       " 22.1                   D        OK\n",
@@ -390,17 +390,26 @@
       "2. Type \"yes\" or \"no\" below\n",
       "3. Press Enter\n",
       "\n",
-      " no\n"
+      " yes\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "    \n",
-      "OK. We can wait.\n",
-      "\n"
+      "[main 194643c] Submitting the week 5 review exercises\n",
+      " 2 files changed, 469 insertions(+), 10 deletions(-)\n",
+      " create mode 100644 week05/week05_assignment_1.ipynb\n",
+      "Counting objects: 6, done.\n",
+      "Delta compression using up to 2 threads.\n",
+      "Compressing objects: 100% (6/6), done.\n",
+      "Writing objects: 100% (6/6), 2.64 KiB | 2.64 MiB/s, done.\n",
+      "Total 6 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 2 local objects.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
+      "To github.com:sairupesh24/hds5210-2022.git\n",
+      "   820b9a7..194643c  main -> main\n"
      ]
     }
    ],
