--- a/week05/week05_assignment_2.ipynb
+++ b/week05/week05_assignment_2.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,12 +151,38 @@
       "    longest(['happy', 'birthday', 'to', 'me'])\n",
       "Expecting:\n",
       "    1\n",
-      "ok\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 8, in NoName\n",
+      "Failed example:\n",
+      "    longest(['happy', 'birthday', 'to', 'me'])\n",
+      "Expected:\n",
+      "    1\n",
+      "Got:\n",
+      "    Position  Item         Longest So Far\n",
+      "    --------- ------------ --------------\n",
+      "            0 happy        0 : 5\n",
+      "            1 birthday     1 : 8\n",
+      "            2 to           1 : 8\n",
+      "            3 me           1 : 8\n",
+      "    1\n",
       "Trying:\n",
-      "    longest(['abc','def','ghi'])\n",
+      "    longest(['one', 'two', 'three', 'four'])\n",
       "Expecting:\n",
-      "    0\n",
-      "ok\n"
+      "    2\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 11, in NoName\n",
+      "Failed example:\n",
+      "    longest(['one', 'two', 'three', 'four'])\n",
+      "Expected:\n",
+      "    2\n",
+      "Got:\n",
+      "    Position  Item         Longest So Far\n",
+      "    --------- ------------ --------------\n",
+      "            0 one          0 : 3\n",
+      "            1 two          0 : 3\n",
+      "            2 three        2 : 5\n",
+      "            3 four         2 : 5\n",
+      "    2\n"
      ]
     }
    ],
@@ -180,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -555,13 +581,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Are you ready to submit your work?\n",
+      "1. Click the Save icon (or do Ctrl-S / Cmd-S)\n",
+      "2. Type \"yes\" or \"no\" below\n",
+      "3. Press Enter\n",
+      "\n",
+      " yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main d19adfa] Submitting the week 5 programming exercises\n",
+      " 3 files changed, 643 insertions(+), 42 deletions(-)\n",
+      " create mode 100644 week05/week05_assignment_2.ipynb\n",
+      "Warning: Permanently added the ECDSA host key for IP address '140.82.113.4' to the list of known hosts.\n",
+      "Counting objects: 7, done.\n",
+      "Delta compression using up to 2 threads.\n",
+      "Compressing objects: 100% (7/7), done.\n",
+      "Writing objects: 100% (7/7), 6.49 KiB | 3.25 MiB/s, done.\n",
+      "Total 7 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 2 local objects.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
+      "To github.com:sairupesh24/hds5210-2022.git\n",
+      "   194643c..d19adfa  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "a=input('''\n",
     "Are you ready to submit your work?\n",
