--- a/week06/week06_assignment_2.ipynb
+++ b/week06/week06_assignment_2.ipynb
@@ -474,13 +474,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Are you ready to submit your work?\n",
+      "1. Click the Save icon (or do Ctrl-S / Cmd-S)\n",
+      "2. Type \"yes\" or \"no\" below\n",
+      "3. Press Enter\n",
+      "\n",
+      " yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main b7b45e9] Submitting the week 6 programming exercises\n",
+      " 1 file changed, 544 insertions(+)\n",
+      " create mode 100644 week06/week06_assignment_2.ipynb\n",
+      "Counting objects: 4, done.\n",
+      "Delta compression using up to 2 threads.\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 5.42 KiB | 5.42 MiB/s, done.\n",
+      "Total 4 (delta 1), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
+      "To github.com:sairupesh24/hds5210-2022.git\n",
+      "   43d6047..b7b45e9  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "a=input('''\n",
     "Are you ready to submit your work?\n",
