--- a/week06/week06_assignment_1.ipynb
+++ b/week06/week06_assignment_1.ipynb
@@ -433,13 +433,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Are you ready to submit your work?\n",
+      "1. Click the Save icon (or do Ctrl-S / Cmd-S)\n",
+      "2. Type \"yes\" or \"no\" below\n",
+      "3. Press Enter\n",
+      "\n",
+      " yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main ae59aef] Submitting the week 6 review exercises\n",
+      " 2 files changed, 528 insertions(+), 2 deletions(-)\n",
+      " create mode 100644 week06/week06_assignment_1.ipynb\n",
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 2 threads.\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 4.54 KiB | 4.54 MiB/s, done.\n",
+      "Total 5 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
+      "To github.com:sairupesh24/hds5210-2022.git\n",
+      "   b7b45e9..ae59aef  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "a=input('''\n",
     "Are you ready to submit your work?\n",
