Submitting the midterm

--- a/week07/week07_assignment_2.ipynb
+++ b/week07/week07_assignment_2.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,17 @@
       "    len(repos)==12\n",
       "Expecting:\n",
       "    True\n",
-      "ok\n"
+      "**********************************************************************\n",
+      "File \"__main__\", line 4, in NoName\n",
+      "Failed example:\n",
+      "    len(repos)==12\n",
+      "Exception raised:\n",
+      "    Traceback (most recent call last):\n",
+      "      File \"/opt/tljh/user/lib/python3.6/doctest.py\", line 1330, in __run\n",
+      "        compileflags, 1), test.globs)\n",
+      "      File \"<doctest NoName[0]>\", line 1, in <module>\n",
+      "        len(repos)==12\n",
+      "    TypeError: object of type 'NoneType' has no len()\n"
      ]
     }
    ],
@@ -300,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +910,7 @@
        "32   *Recommended dietary allowance **Adequate intake  "
       ]
      },
-     "execution_count": 176,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
