--- a/week07/week07_assignment_1.ipynb
+++ b/week07/week07_assignment_1.ipynb
@@ -316,19 +316,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 45addc3] Submitting the week 7 review exercises\n",
-      " 3 files changed, 422 insertions(+), 17 deletions(-)\n",
-      " create mode 100644 week07/week07_assignment_1.ipynb\n",
-      "Counting objects: 7, done.\n",
+      "[main a3b2bf1] Submitting the week 7 review exercises\n",
+      " 1 file changed, 27 insertions(+), 24 deletions(-)\n",
+      "Counting objects: 4, done.\n",
       "Delta compression using up to 2 threads.\n",
-      "Compressing objects: 100% (7/7), done.\n",
-      "Writing objects: 100% (7/7), 2.45 KiB | 2.45 MiB/s, done.\n",
-      "Total 7 (delta 4), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (4/4), completed with 3 local objects.\u001b[K\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 833 bytes | 833.00 KiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "remote: This repository moved. Please use the new location:\u001b[K\n",
       "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
       "To github.com:sairupesh24/hds5210-2022.git\n",
-      "   ae59aef..45addc3  main -> main\n"
+      "   45addc3..a3b2bf1  main -> main\n"
      ]
     }
    ],
