--- a/week10/week10_assignment_1.ipynb
+++ b/week10/week10_assignment_1.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answers['36.4'] = \"B\""
+    "answers['36.4'] = \"C\""
    ]
   },
   {
@@ -258,7 +258,7 @@
       " 36.1                   A        OK\n",
       " 36.2                   D        OK\n",
       " 36.3                   B        OK\n",
-      " 36.4                   B        NO\n",
+      " 36.4                   C        OK\n",
       " 38.1                   C        OK\n",
       " 38.2                   A        OK\n",
       " 38.3                   C        OK\n"
@@ -325,13 +325,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Are you ready to submit your work?\n",
+      "1. Click the Save icon (or do Ctrl-S / Cmd-S)\n",
+      "2. Type \"yes\" or \"no\" below\n",
+      "3. Press Enter\n",
+      "\n",
+      " yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 69e1bf4] Submitting the week 10 review exercises\n",
+      " 2 files changed, 410 insertions(+), 2 deletions(-)\n",
+      " create mode 100644 week10/week10_assignment_1.ipynb\n",
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 2 threads.\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 3.25 KiB | 3.25 MiB/s, done.\n",
+      "Total 5 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
+      "To github.com:sairupesh24/hds5210-2022.git\n",
+      "   798fded..69e1bf4  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "a=input('''\n",
     "Are you ready to submit your work?\n",
