Submitting the week 13 review exercises

--- a/week12/week12_assignment_2.ipynb
+++ b/week12/week12_assignment_2.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 1,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -68,7 +68,7 @@
        "(32586, 40)"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 5,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 8,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -240,10 +240,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc049453400>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f325387c860>"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "21                         tejus.maduskar    12.0    39.0"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -677,17 +677,26 @@
       "2. Type \"yes\" or \"no\" below\n",
       "3. Press Enter\n",
       "\n",
-      " \n"
+      " yes\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "    \n",
-      "OK. We can wait.\n",
-      "\n"
+      "[main 31ad6c4] Submitting the week 12 programming assignment\n",
+      " 1 file changed, 751 insertions(+)\n",
+      " create mode 100644 week12/week12_assignment_2.ipynb\n",
+      "Counting objects: 4, done.\n",
+      "Delta compression using up to 2 threads.\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 31.50 KiB | 10.50 MiB/s, done.\n",
+      "Total 4 (delta 1), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
+      "To github.com:sairupesh24/hds5210-2022.git\n",
+      "   68b244c..31ad6c4  main -> main\n"
      ]
     }
    ],
