--- a/week12/week12_assignment_1.ipynb
+++ b/week12/week12_assignment_1.ipynb
@@ -216,13 +216,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Are you ready to submit your work?\n",
+      "1. Click the Save icon (or do Ctrl-S / Cmd-S)\n",
+      "2. Type \"yes\" or \"no\" below\n",
+      "3. Press Enter\n",
+      "\n",
+      " yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 68b244c] Submitting the week 12 review exercises\n",
+      " 2 files changed, 275 insertions(+), 274 deletions(-)\n",
+      " delete mode 100644 week11/week11_assignment_2.ipynb\n",
+      " create mode 100644 week12/week12_assignment_1.ipynb\n",
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 2 threads.\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 2.71 KiB | 2.71 MiB/s, done.\n",
+      "Total 5 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
+      "To github.com:sairupesh24/hds5210-2022.git\n",
+      "   99c2e0c..68b244c  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "a=input('''\n",
     "Are you ready to submit your work?\n",
