Submitting the week 12 programming assignment

--- a/week13/week13_assignment_1.ipynb
+++ b/week13/week13_assignment_1.ipynb
@@ -542,17 +542,26 @@
       "2. Type \"yes\" or \"no\" below\n",
       "3. Press Enter\n",
       "\n",
-      " no\n"
+      " yes\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "    \n",
-      "OK. We can wait.\n",
-      "\n"
+      "[main 8b8cd89] Submitting the week 13 review exercises\n",
+      " 3 files changed, 684 insertions(+), 32 deletions(-)\n",
+      " create mode 100644 week13/week13_assignment_1.ipynb\n",
+      "Counting objects: 7, done.\n",
+      "Delta compression using up to 2 threads.\n",
+      "Compressing objects: 100% (7/7), done.\n",
+      "Writing objects: 100% (7/7), 4.22 KiB | 1.41 MiB/s, done.\n",
+      "Total 7 (delta 4), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (4/4), completed with 3 local objects.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
+      "To github.com:sairupesh24/hds5210-2022.git\n",
+      "   31ad6c4..8b8cd89  main -> main\n"
      ]
     }
    ],
