--- a/week13/week13_assignment_2.ipynb
+++ b/week13/week13_assignment_2.ipynb
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "['KOR', 'NOR', 'SWE', 'ISL', 'FIN', 'CAN', 'DEU', 'AUS', 'NLD', 'IRL']"
+       "['NOR', 'KOR', 'ISL', 'FIN', 'SWE', 'CAN', 'DEU', 'AUS', 'NLD', 'IRL']"
       ]
      },
      "execution_count": 3,
@@ -155,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f1ccbf57b00>"
+       "<seaborn.axisgrid.PairGrid at 0x7f24387bc828>"
       ]
      },
      "execution_count": 5,
@@ -229,13 +229,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Are you ready to submit your work?\n",
+      "1. Click the Save icon (or do Ctrl-S / Cmd-S)\n",
+      "2. Type \"yes\" or \"no\" below\n",
+      "3. Press Enter\n",
+      "\n",
+      " yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 53609d4] Submitting the week 12 programming assignment\n",
+      " 2 files changed, 303 insertions(+), 5 deletions(-)\n",
+      " create mode 100644 week13/week13_assignment_2.ipynb\n",
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 2 threads.\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 259.10 KiB | 10.36 MiB/s, done.\n",
+      "Total 5 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "remote: This repository moved. Please use the new location:\u001b[K\n",
+      "remote:   git@github.com:Sairupesh24/hds5210-2022.git\u001b[K\n",
+      "To github.com:sairupesh24/hds5210-2022.git\n",
+      "   8b8cd89..53609d4  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "a=input('''\n",
     "Are you ready to submit your work?\n",
