--- a/final/final.ipynb
+++ b/final/final.ipynb
@@ -1234,7 +1234,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fab17220898>"
+       "<seaborn.axisgrid.PairGrid at 0x7f890a77a588>"
       ]
      },
      "execution_count": 16,
@@ -1268,7 +1268,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fab040f0668>"
+       "<seaborn.axisgrid.PairGrid at 0x7f88f1f49b70>"
       ]
      },
      "execution_count": 17,
@@ -1696,7 +1696,7 @@
     "\n",
     "if a=='yes':\n",
     "    !git add \"final.ipynb\"\n",
-    "    !git commit -a -m \"Submitting the midterm\"\n",
+    "    !git commit -a -m \"Submitting the final\"\n",
     "    !git push\n",
     "else:\n",
     "    print('''\n",
